SFDC Automation/src/objects/RSM_PO__c.object
<CustomObject>
    <description>Object to store Purchase Order header data</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RSM POs</relationshipLabel>
        <relationshipName>RSM_POs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>DateCreated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <label>DateModified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOrderedInRemedy__c</fullName>
        <label>DateOrderedInRemedy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOrdered__c</fullName>
        <label>DateOrdered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReceived__c</fullName>
        <label>DateReceived</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateShipped__c</fullName>
        <label>DateShipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DestinationLocationCode__c</fullName>
        <label>DestinationLocationCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderComments__c</fullName>
        <label>OrderComments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PONumberFromTeletrac__c</fullName>
        <label>PONumberFromTeletrac</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemedyChangeNumber__c</fullName>
        <label>RemedyChangeNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemedyPONumber__c</fullName>
        <label>RemedyPONumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignedBy__c</fullName>
        <label>SignedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>TrackingNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit #</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>RSM POs</relationshipLabel>
        <relationshipName>RSM_POs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RSM PO</label>
    <nameField>
        <label>Customer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>